[FIX] footer align

--- a/_moppris/css/main.css
+++ b/_moppris/css/main.css
@@ -63,7 +63,7 @@ body
 
 .menu_icon
 {
-    text-align:center;
+    text-align: center;
     width: 1em;
     padding-right: 0.5em;
 }
@@ -101,6 +101,13 @@ footer
     width: 100%;
     background: #d7003a;
     color: #191818;
+}
+
+#footer_content
+{
+    position: absolute;
+    top: 1em;
+    bottom: 1em;
 }
 
 
